Avoid large safe area fallback on mobile browsers

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html, body {
 html {
   position: relative;
   min-height: 100%;
-  min-height: calc(100% + env(safe-area-inset-top, 40px));
+  min-height: calc(100% + env(safe-area-inset-top, 0px));
 }
 html::before {
   content: '';
@@ -74,7 +74,7 @@ button {
 body {
   background: transparent;
   min-height: 100%;
-  min-height: calc(100% + env(safe-area-inset-top, 40px));
+  min-height: calc(100% + env(safe-area-inset-top, 0px));
   min-height: 100vh;
   min-height: 100svh;
   min-height: 100dvh;
